--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
      "author": "Brendan Dayley",
-     "name": "vpriya123",
+     "name": "vpriya",
      "version": "0.1.1",
      "description": "Censors words out of text",
      "main": "censortext",
